--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -1,5 +1,5 @@
 .container {
-  width: 1200px;
+  width: var(--width-container);
   margin-left: auto;
   margin-right: auto;
   padding-left: 15px;
