--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -11,6 +11,13 @@
   align-items: center;
 }
 
+.header__logo {
+  padding-top: 25px;
+  padding-bottom: 24px;
+
+  color: #000;
+}
+
 .nav {
   display: flex;
   margin-left: 93px;
@@ -31,34 +38,34 @@
   color: var(--title-text-color);
 
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.nav__link:hover,
-.nav__link:focus,
-.current {
-  color: var(--accent-color);
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+  }
 }
 
 .nav__link--current {
   position: relative;
-}
+  color: var(--accent-color);
 
-.nav__link--current::after {
-  content: "";
-  display: block;
-  background-color: var(--accent-color);
-  width: 100%;
-  height: 4px;
-  border-radius: 2px;
+  &::after {
+    content: "";
+    display: block;
+    background-color: var(--accent-color);
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
 
-  position: absolute;
-  bottom: -1px;
+    position: absolute;
+    bottom: -1px;
+  }
 }
 
 .contacts__list {
-  display: flex;
+  @include flexcenter();
+
   margin-left: auto;
-  align-items: center;
 }
 
 .contacts__item:not(:first-child) {
@@ -66,8 +73,7 @@
 }
 
 .contacts__link {
-  display: flex;
-  align-items: center;
+  @include flexcenter();
 
   padding-top: 33px;
   padding-bottom: 31px;
@@ -79,14 +85,14 @@
   color: var(--primary-text-color);
 
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+  }
 }
 
 .contacts__icon {
   margin-right: 10px;
   fill: currentcolor;
-}
-
-.contacts__link:hover,
-.contacts__link:focus {
-  color: var(--accent-color);
 }
