--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,10 +1,4 @@
-@import "./utils/variables";
-@import "./base/body";
-@import "./base/section";
-@import "./base/container";
-@import "./base/reset";
-@import "./components/social-icon";
-@import "./utils/hidden";
-@import "./utils/animations";
-@import "./components/logo";
-@import "./layout/header";
+@import "./utils/utils";
+@import "./base/base";
+@import "./components/components";
+@import "./layout/layout";
