--- a/sass/base/_section.scss
+++ b/sass/base/_section.scss
@@ -2,6 +2,15 @@
   padding: 94px 0;
 }
 
+.section--no-padding-top {
+  padding-top: 0;
+}
+
+.section--background {
+  background-color: #f5f4fa;
+  text-align: center;
+}
+
 .section__title {
   text-align: center;
 
