--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -1,9 +1,4 @@
 .team {
-  background-color: #f5f4fa;
-  text-align: center;
-}
-
-.team__list {
   display: flex;
   margin-top: 50px;
 }
@@ -40,7 +35,7 @@
   line-height: 1.19;
 }
 
-.social__list {
+.social {
   @include flexcenter();
   margin-top: 16px;
 }
@@ -50,6 +45,11 @@
 }
 
 .social__link {
+  @include flexcenter();
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+
   fill: #afb1b8;
 
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
