--- a/sass/layout/_working.scss
+++ b/sass/layout/_working.scss
@@ -1,8 +1,4 @@
 .working {
-  padding-top: 0;
-}
-
-.working__list {
   display: flex;
   margin-top: 50px;
 }
@@ -11,13 +7,13 @@
   margin-left: 30px;
 }
 
-.work-thumb {
+.working__thumb {
   position: relative;
 
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-.work__text {
+.working__text {
   padding: 27px 0;
 
   font-weight: 700;
